src/ui/tests/snapshots/eks__ui__tests__golden__the_overview_with_metrics_server_missing.snap
---
source: src/ui/tests/golden.rs
expression: "text(&frame(&app, WIDTH, HEIGHT))"
---
 eks │ beta (us-east-1)
┌ Clusters ────────────────────┐┌ Overview ────────────────────────────────────────────────────────┐
│  alpha us-east-1             ││Context   arn:aws:eks:us-east-1:1234:cluster/beta                 │
│● beta us-east-1              ││Namespace default                                                 │
│  gamma us-east-1             ││Region    us-east-1                                               │
│                              ││Account   1234                                                    │
│                              ││                                                                  │
│                              ││NODES                                                             │
│                              ││usage unavailable: metrics-server is not installed on this cluster│
│                              ││ip-10-0-1-17.ec2.internal  Ready  CPU ░░░░░░░░░░ -  MEM ░░░░░░░░░░│
│                              ││-  23/58 pods                                                     │
│                              ││ip-10-0-2-40.ec2.internal  Ready  CPU ░░░░░░░░░░ -  MEM ░░░░░░░░░░│
│                              ││-  23/58 pods                                                     │
│                              ││ip-10-0-3-8.ec2.internal  NotReady  CPU ░░░░░░░░░░ -  MEM         │
│                              ││░░░░░░░░░░ -  23/58 pods                                          │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 tab/→ switch/drill   j/k move   enter open   ←/esc back   r refresh   s/S sort   q quit   / filter
