src/ui/tests/snapshots/eks__ui__tests__golden__the_ports_and_forwards_in_colour.snap
---
source: src/ui/tests/golden.rs
expression: "styled(&frame(&forwarding_with_one_lost(), WIDTH, 30), Theme::dark())"
---
 eks │ beta (us-east-1)
┌ Clusters ────────────────────┐┌ Overview ────────────────────────────────────────────────────────┐
│  alpha us-east-1             ││Context   arn:aws:eks:us-east-1:1234:cluster/beta                 │
│● beta us-east-1              ││Namespace default                                                 │
│  gamma us-east-1             ││Region    us-east-1                                               │
│                              ││Account   1234                                                    │
│                              ││                                                                  │
│                              ││NODES                                                             │
│                              ││ip-10-0-1-17.ec2.internal  Ready  CPU ██░░░░░░░░ 900m  MEM        │
│                              ││████░░░░░░ 6Gi  23/58 pods                                        │
│                              ││ip-10-0-2-40.ec2.internal  Ready  CPU █████████░ 3500m  MEM       │
│                              ││████████░░ 13Gi  23/58 pods                                       │
│                              ││ip-10-0-3-8.ec2.internal  NotReady  CPU ░░░░░░░░░░ -  MEM         │
│                              ││░░░░░░░░░░ -  23/58 pods                                          │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
│                              ││                                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 Forwards · they end when eks quits · c clears stopped ─────────────────────────────────────────────
 http://127.0.0.1:8080 → pod api-7d9f8b6c4-x2kqp port 8080  2 connections
   pod api-7d9f8b6c4-x2kqp refused a connection on port 8080: nothing in it is listening there.
 pod api-7d9f8b6c4-x2kqp port 9090  starting…
 pod ledger-0 port 5432  stopped
   pod ledger-0 was deleted, so there is nothing left to forward to.
   StatefulSet ledger will recreate it under the same name: press f on its port again once it is
 Running.
 tab/→ switch/drill   j/k move   enter open   ←/esc back   r refresh   s/S sort   q quit   / filter

--- styles ---
0:0-4 fg=accent bg=default mod=BOLD
0:5-6 fg=muted bg=default mod=NONE
0:7-22 fg=text bg=default mod=BOLD
1:0-0 fg=border bg=default mod=NONE
1:1-10 fg=accent bg=default mod=BOLD
1:11-31 fg=border bg=default mod=NONE
1:32-32 fg=accent bg=default mod=NONE
1:33-42 fg=accent bg=default mod=BOLD
1:43-99 fg=accent bg=default mod=NONE
2:0-0 fg=border bg=default mod=NONE
2:1-2 fg=success bg=default mod=NONE
2:3-7 fg=text bg=default mod=NONE
2:9-17 fg=muted bg=default mod=NONE
2:31-31 fg=border bg=default mod=NONE
2:32-32 fg=accent bg=default mod=NONE
2:33-42 fg=muted bg=default mod=NONE
2:43-81 fg=text bg=default mod=NONE
2:99-99 fg=accent bg=default mod=NONE
3:0-0 fg=border bg=default mod=NONE
3:1-30 fg=text bg=selection_bg mod=BOLD
3:31-31 fg=border bg=default mod=NONE
3:32-32 fg=accent bg=default mod=NONE
3:33-42 fg=muted bg=default mod=NONE
3:43-49 fg=text bg=default mod=NONE
3:99-99 fg=accent bg=default mod=NONE
4:0-0 fg=border bg=default mod=NONE
4:1-2 fg=success bg=default mod=NONE
4:3-7 fg=text bg=default mod=NONE
4:9-17 fg=muted bg=default mod=NONE
4:31-31 fg=border bg=default mod=NONE
4:32-32 fg=accent bg=default mod=NONE
4:33-42 fg=muted bg=default mod=NONE
4:43-51 fg=text bg=default mod=NONE
4:99-99 fg=accent bg=default mod=NONE
5:0-0 fg=border bg=default mod=NONE
5:31-31 fg=border bg=default mod=NONE
5:32-32 fg=accent bg=default mod=NONE
5:33-42 fg=muted bg=default mod=NONE
5:43-46 fg=text bg=default mod=NONE
5:99-99 fg=accent bg=default mod=NONE
6:0-0 fg=border bg=default mod=NONE
6:31-31 fg=border bg=default mod=NONE
6:32-32 fg=accent bg=default mod=NONE
6:99-99 fg=accent bg=default mod=NONE
7:0-0 fg=border bg=default mod=NONE
7:31-31 fg=border bg=default mod=NONE
7:32-32 fg=accent bg=default mod=NONE
7:33-37 fg=accent bg=default mod=BOLD
7:99-99 fg=accent bg=default mod=NONE
8:0-0 fg=border bg=default mod=NONE
8:31-31 fg=border bg=default mod=NONE
8:32-32 fg=accent bg=default mod=NONE
8:33-59 fg=text bg=selection_bg mod=BOLD
8:60-64 fg=success bg=selection_bg mod=BOLD
8:65-66 fg=text bg=selection_bg mod=BOLD
8:67-70 fg=muted bg=selection_bg mod=BOLD
8:71-72 fg=success bg=selection_bg mod=BOLD
8:73-80 fg=muted bg=selection_bg mod=BOLD
8:81-87 fg=text bg=selection_bg mod=BOLD
8:88-90 fg=muted bg=selection_bg mod=BOLD
8:99-99 fg=accent bg=default mod=NONE
9:0-0 fg=border bg=default mod=NONE
9:31-31 fg=border bg=default mod=NONE
9:32-32 fg=accent bg=default mod=NONE
9:33-36 fg=success bg=selection_bg mod=BOLD
9:37-42 fg=muted bg=selection_bg mod=BOLD
9:43-48 fg=text bg=selection_bg mod=BOLD
9:49-58 fg=muted bg=selection_bg mod=BOLD
9:99-99 fg=accent bg=default mod=NONE
10:0-0 fg=border bg=default mod=NONE
10:31-31 fg=border bg=default mod=NONE
10:32-32 fg=accent bg=default mod=NONE
10:33-57 fg=text bg=default mod=NONE
10:60-64 fg=success bg=default mod=NONE
10:67-70 fg=muted bg=default mod=NONE
10:71-79 fg=warning bg=default mod=NONE
10:80-80 fg=muted bg=default mod=NONE
10:82-86 fg=text bg=default mod=NONE
10:89-91 fg=muted bg=default mod=NONE
10:99-99 fg=accent bg=default mod=NONE
11:0-0 fg=border bg=default mod=NONE
11:31-31 fg=border bg=default mod=NONE
11:32-32 fg=accent bg=default mod=NONE
11:33-40 fg=warning bg=default mod=NONE
11:41-42 fg=muted bg=default mod=NONE
11:44-47 fg=text bg=default mod=NONE
11:50-59 fg=muted bg=default mod=NONE
11:99-99 fg=accent bg=default mod=NONE
12:0-0 fg=border bg=default mod=NONE
12:31-31 fg=border bg=default mod=NONE
12:32-32 fg=accent bg=default mod=NONE
12:33-56 fg=text bg=default mod=NONE
12:59-66 fg=danger bg=default mod=NONE
12:69-82 fg=muted bg=default mod=NONE
12:84-84 fg=text bg=default mod=NONE
12:87-89 fg=muted bg=default mod=NONE
12:99-99 fg=accent bg=default mod=NONE
13:0-0 fg=border bg=default mod=NONE
13:31-31 fg=border bg=default mod=NONE
13:32-32 fg=accent bg=default mod=NONE
13:33-42 fg=muted bg=default mod=NONE
13:44-44 fg=text bg=default mod=NONE
13:47-56 fg=muted bg=default mod=NONE
13:99-99 fg=accent bg=default mod=NONE
14:0-0 fg=border bg=default mod=NONE
14:31-31 fg=border bg=default mod=NONE
14:32-32 fg=accent bg=default mod=NONE
14:99-99 fg=accent bg=default mod=NONE
15:0-0 fg=border bg=default mod=NONE
15:31-31 fg=border bg=default mod=NONE
15:32-32 fg=accent bg=default mod=NONE
15:99-99 fg=accent bg=default mod=NONE
16:0-0 fg=border bg=default mod=NONE
16:31-31 fg=border bg=default mod=NONE
16:32-32 fg=accent bg=default mod=NONE
16:99-99 fg=accent bg=default mod=NONE
17:0-0 fg=border bg=default mod=NONE
17:31-31 fg=border bg=default mod=NONE
17:32-32 fg=accent bg=default mod=NONE
17:99-99 fg=accent bg=default mod=NONE
18:0-0 fg=border bg=default mod=NONE
18:31-31 fg=border bg=default mod=NONE
18:32-32 fg=accent bg=default mod=NONE
18:99-99 fg=accent bg=default mod=NONE
19:0-0 fg=border bg=default mod=NONE
19:31-31 fg=border bg=default mod=NONE
19:32-32 fg=accent bg=default mod=NONE
19:99-99 fg=accent bg=default mod=NONE
20:0-31 fg=border bg=default mod=NONE
20:32-99 fg=accent bg=default mod=NONE
21:0-54 fg=accent bg=default mod=BOLD
21:55-99 fg=border bg=default mod=NONE
22:1-21 fg=accent bg=default mod=BOLD
22:22-57 fg=text bg=default mod=NONE
22:58-72 fg=muted bg=default mod=NONE
23:1-94 fg=warning bg=default mod=NONE
24:1-33 fg=text bg=default mod=NONE
24:34-44 fg=muted bg=default mod=NONE
25:1-22 fg=text bg=default mod=NONE
25:23-31 fg=danger bg=default mod=NONE
26:1-67 fg=danger bg=default mod=NONE
27:1-95 fg=danger bg=default mod=NONE
28:1-8 fg=danger bg=default mod=NONE
29:1-5 fg=accent bg=default mod=BOLD
29:6-21 fg=muted bg=default mod=NONE
29:22-24 fg=accent bg=default mod=BOLD
29:25-32 fg=muted bg=default mod=NONE
29:33-37 fg=accent bg=default mod=BOLD
29:38-45 fg=muted bg=default mod=NONE
29:46-50 fg=accent bg=default mod=BOLD
29:51-58 fg=muted bg=default mod=NONE
29:59-59 fg=accent bg=default mod=BOLD
29:60-70 fg=muted bg=default mod=NONE
29:71-73 fg=accent bg=default mod=BOLD
29:74-81 fg=muted bg=default mod=NONE
29:82-82 fg=accent bg=default mod=BOLD
29:83-90 fg=muted bg=default mod=NONE
29:91-91 fg=accent bg=default mod=BOLD
29:92-99 fg=muted bg=default mod=NONE
